<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer">
    <RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundcolor1"
    tools:context=".Activity.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/backgroundtoolbar1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/msb"
                android:text="@string/app_name"
                android:textColor="?attr/toolbarheading1"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/my_toolbar"
            android:layout_centerInParent="true"
            android:id="@+id/mainlayout"
            android:gravity="center"
            android:layout_above="@id/adView"
            >
        <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/progressbar1"
        android:layout_width="200dp"
        android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/my_toolbar"
        app:donut_finished_color="?attr/completion"
        app:donut_text_color="?attr/progress"
            app:arc_stroke_width="10dp"
        app:donut_text_size="36sp"
        app:donut_unfinished_color="#D3D3D3"
            app:arc_angle="360"/>
            <!--<com.github.lzyzsd.circleprogress.DonutProgress-->
                <!--android:id="@+id/progressbar1"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="200dp"-->
                <!--android:layout_below="@id/my_toolbar"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--app:donut_text_size="24sp"/>-->
            <!--<com.mikhaellopez.circularprogressbar.CircularProgressBar-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="200dp"-->
                <!--app:cpb_background_progressbar_color="?attr/incompletion"-->
                <!--app:cpb_background_progressbar_width="5dp"-->
                <!--app:cpb_progressbar_color="?attr/completion"-->
                <!--app:cpb_progressbar_width="10dp"-->
                <!--&gt;-->
            <!--</com.mikhaellopez.circularprogressbar.CircularProgressBar>-->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        app:cardBackgroundColor="?attr/cardbackgroundcolor1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/read"
        app:contentPadding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_library_books_black_24dp"
                android:layout_margin="4dp"
                android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="?attr/cardtextcolor1"
            android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="?attr/cardbackgroundcolor1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/quiz"
            app:contentPadding="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textSize="20sp"
                android:textColor="?attr/cardtextcolor1"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="?attr/cardbackgroundcolor1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/bookmarked"
            app:contentPadding="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_black_24dp"
                android:tint="@color/colorPrimary"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:id="@+id/staricon"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmarked"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:layout_marginLeft="16dp"
                android:textColor="?attr/cardtextcolor1"
                android:textStyle="bold"
                android:paddingLeft="8dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="?attr/cardbackgroundcolor1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/contactus"
            app:contentPadding="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thumb_up_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:layout_marginLeft="4dp"
                android:textColor="?attr/cardtextcolor1"
                android:textStyle="bold"
                android:textAllCaps="true"
                />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="?attr/cardbackgroundcolor1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/settings"
            app:contentPadding="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@color/colorPrimary"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginLeft="4dp"

                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="?attr/cardtextcolor1"
                android:textStyle="bold"
                android:textAllCaps="true"
                />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:background="@android:color/transparent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/fb1"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:id="@+id/facebook"
                android:background="@android:color/transparent"
                />

                <!--<ImageView-->
                    <!--android:layout_width="48dp"-->
                    <!--android:layout_height="48dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@drawable/youtu"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:scaleType="centerInside"-->
                    <!--android:id="@+id/youtube"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--/>-->

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/amazon"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:id="@+id/amazon"
                    android:background="@android:color/transparent"
                    />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/globe"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:id="@+id/website1"
                android:background="@android:color/transparent"
                />


        </LinearLayout>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner"/>
</RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        app:itemTextColor="#000"
        android:background="?attr/toolbarheading1"
        app:headerLayout="@layout/header_nav"/>
</android.support.v4.widget.DrawerLayout>